# timesfm-introduction

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
01-energy-forecasting/: README.md
01-energy-forecasting/data/processed/: pjme_clean.csv  walk_forward_2017.csv  walk_forward_results.csv  weather_philadelphia.csv  xgb_residual_results.csv
01-energy-forecasting/scripts/: 01_eda.py  02_data_cleaning,.py  03_walk_forward.py  04_residual_model.py  05_ensemble.py  05_evaluation.py
02-gasoline-forecasting/: README.md
02-gasoline-forecasting/data/models/: best_residual_model.joblib  xgb_baseline.joblib  xgb_residual.joblib
02-gasoline-forecasting/data/processed/: baseline_results_2024.csv  context_engineering_results.csv  ensemble_results_2024.csv  forecast_2025_results.csv  residual_walk_forward.csv  secondary_model_results.csv  walk_forward_results.csv
02-gasoline-forecasting/data/raw/: gasoline_price_weekly.csv  gasoline_weekly.csv
02-gasoline-forecasting/scripts/: 00_download.py  01_eda.py  02_baseline_models.py  03_ensemble.py  04_forecast_2025.py  utils.py
