[project]
name = "timesfm-introduction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "timesfm[torch]>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.4.0",
    "kaggle>=1.6.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "seaborn>=0.13.2",
    "scipy>=1.17.1",
    "pyarrow>=24.0.0",
]
